fix: prevent scrollbar layout shift

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,7 @@
 
 @layer base {
   html {
+    scrollbar-gutter: stable;
     @apply max-h-screen antialiased;
   }
 
